# DuckCluster

./: .gitignore  README.md  pom.xml
benchmark/: pom.xml
cli/: README.md  pyproject.toml
cli/duckcluster/: __init__.py  __main__.py  banner.py  client.py  format.py  input.py  shell.py  validate.py
cli/tests/: test_cli.py
common/: pom.xml
coordinator/: pom.xml
coordinator/src/main/resources/: logback.xml
docs/: ARCHITECTURE.md  BENCHMARK-COMMANDS.md  BENCHMARK.md  DESIGN-DECISIONS.md  DESIGN-planner.md  OPTIMIZATIONS.md  PLAN-cli.md  PLAN-dashboard.md  PLAN-tpch-planner-hardening.md  PROPOSAL-connection-pool-and-data-locality.md
proto/: pom.xml
proto/src/main/proto/: cluster.proto
scripts/: benchmark-cleanup.sh  benchmark-datagen.sh  benchmark-plots.py  benchmark-redistribute.py  benchmark-redistribute.sh  benchmark-run.sh  benchmark_datagen.py  duckcluster  ensure-python-duckdb.sh  prepare-demo-shards.py  query-demo.sh  run-integration-tests.sh  split-and-distribute.sh  start-cluster.sh  test-phase1.sh  test-phase2.sh
tests/integration/: README.md  conftest.py  helpers.py  manifest.yaml  requirements.txt  test_compare.py  test_concurrency.py  test_hash_ring.py  test_replication.py  test_resilience.py  test_scenarios.py  test_stress.py  test_topology.py  test_tpch.py
tests/integration/data/: demo-events.csv
tests/integration/duckcluster/: baseline.py  cluster.py  compare.py  demo.py  query.py  shards.py  tpch.py  waits.py
tests/integration/expected/correctness/: avg_score.out  filter_pushdown.out  group_by_count.out  top_k.out  (+2 more)
worker/: pom.xml
(+145 files in other folders)
