[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "duckcluster-cli"
version = "0.1.0"
description = "Command-line client for DuckCluster"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
duckcluster = "duckcluster.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["duckcluster*"]
